TPLTRIPOD-63 #comment fixing align of content in header

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1483,9 +1483,7 @@ mod-articles-category-introtext{
 	&.tripodSlideshow{
 		.box-sizing(border-box);
 		height: 100%;
-		margin-bottom: 0;
-		margin-left: 10px;
-		margin-right: 10px;
+		margin: 0 10px;
 		padding-bottom: 150px;
 		padding-top: 160px;
 		#logo{
